--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/Ma25th/Modulo-1-Trabalho#readme",
   "dependencies": {
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "express-session": "^1.18.0"
   }
 }
